--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -23,7 +23,16 @@ body {
 ul {
 	list-style: none;
 }
-
+.visually-hiden {
+	position: absolute;
+	width: 1px;
+	height: 1px;
+	margin: -1px;
+	border: 0;
+	padding: 0;
+	clip: rect(0, 0, 0, 0);
+	overflow: hidden;
+}
 /* Header CSS */
 .container {
 	width: 1200px;
@@ -118,6 +127,7 @@ nav {
 }
 .icon-head {
 	margin-right: 5px;
+	vertical-align: middle;
 }
 
 /* Hero CSS */
@@ -246,7 +256,8 @@ nav {
 }
 
 .section-title.work,
-.section-title.crew {
+.section-title.crew,
+.section-title.clients {
 	margin-top: 0;
 	margin-bottom: 50px;
 	font-size: 36px;
@@ -256,6 +267,7 @@ nav {
 
 .section.team {
 	background-color: #f5f4fa;
+	margin-bottom: 94px;
 }
 .team {
 	display: flex;
@@ -291,26 +303,58 @@ nav {
 	padding: 0;
 	margin-bottom: 30px;
 }
-.networks-block {
-	background-color: #212121;
+.networks-list .item {
+	background-color: transparent;
+	box-shadow: none;
+	border-color: transparent;
+}
+.networks {
 	width: 44px;
 	height: 44px;
-	border-radius: 50%;
-	text-align: center;
+	display: flex;
+	justify-content: center;
 	align-items: center;
+	border-radius: 50%;
+	fill: #afb1b8;
 }
-.networks:not(:last-child) {
+.networks-list .item:not(:last-child) {
 	margin-right: 10px;
 }
-.networks-block:hover {
+
+.networks:hover {
 	background-color: var(--acent-color);
+	fill: #ffffff;
 }
 .networks-icon {
-	margin-top: 11px;
 	width: 20px;
 	height: 20px;
 }
 
+.clients-list {
+	display: flex;
+	justify-content: center;
+	padding: 0;
+}
+.clients-list .item {
+	margin-bottom: 94px;
+}
+.client-link {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 92px;
+	width: 170px;
+	border: 1px solid #afb1b8;
+	border-radius: 4px;
+}
+
+.client-link:hover,
+.client-link:focus {
+	border-color: var(--acent-color);
+}
+.clients-list .item:not(:last-child) {
+	margin-right: 30px;
+}
 /* footer CSS */
 .container.foot {
 	padding-top: 60px;
@@ -361,9 +405,6 @@ nav {
 	margin-top: 94px;
 	margin-bottom: 50px;
 }
-.filters .item:not(:last-child) {
-	margin-right: 8px;
-}
 
 .filters .button {
 	border-color: transparent;
@@ -375,6 +416,9 @@ nav {
 	font-weight: 500;
 	font-size: 16px;
 	line-height: 1.62;
+}
+.filters .item:not(:last-child) {
+	margin-right: 8px;
 }
 
 .filters .button:hover,
@@ -408,6 +452,10 @@ nav {
 }
 .projects .item:nth-last-child(-n + 3) {
 	margin-bottom: 0px;
+}
+.projects .item:hover,
+.projects .item:focus {
+	box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .projects p {
