--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -18,7 +18,8 @@ body {
 	color: var(--primary-text-color);
 	font-family: Roboto, sans-serif;
 	letter-spacing: 0.03em;
-	width: 1600px;
+	/* width: 1600px; */
+	justify-content: center;
 }
 ul {
 	list-style: none;
@@ -133,6 +134,8 @@ nav {
 /* Hero CSS */
 
 .hero {
+	margin: 0 auto;
+	width: 1600px;
 	height: 600px;
 	padding-top: 200px;
 	padding-bottom: 210px;
@@ -140,7 +143,7 @@ nav {
 	background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/Hero.jpg");
 	background-position: center;
 	text-align: center;
-	margin-bottom: 94px;
+	justify-content: center;
 }
 
 .hero-title {
@@ -170,7 +173,10 @@ nav {
 }
 
 /* MAIN CSS (without hero) */
-
+.section.features {
+	padding-top: 94px;
+	padding-bottom: 59px;
+}
 .section .section-title {
 	color: var(--title-text-color);
 
@@ -184,8 +190,6 @@ nav {
 	padding-left: 15px;
 	padding-right: 15px;
 	margin: 0 auto;
-	/* margin-top: 0; */
-	margin-bottom: 100px;
 }
 .preference .item {
 	width: 270px;
@@ -230,21 +234,23 @@ nav {
 	margin-bottom: 0;
 }
 
-.container.teams {
+/* .container.teams {
 	padding-bottom: 94px;
 	padding-top: 94px;
-}
+} */
 .section.workfield {
 	width: 1200px;
 	padding-left: 15px;
 	padding-right: 15px;
 	margin: 0 auto;
-	margin-bottom: 94px;
+	padding-top: 56px;
+	padding-bottom: 94px;
 }
 .our-workfield {
 	display: flex;
 	padding: 0;
 }
+
 .team .item {
 	border: 1px solid #eeeeee;
 	border-bottom-right-radius: 4px;
@@ -267,7 +273,8 @@ nav {
 
 .section.team {
 	background-color: #f5f4fa;
-	margin-bottom: 94px;
+	padding-top: 94px;
+	padding-bottom: 94px;
 }
 .team {
 	display: flex;
@@ -330,14 +337,18 @@ nav {
 	height: 20px;
 }
 
+.section.our-clients {
+	padding-top: 94px;
+	padding-bottom: 94px;
+}
+
 .clients-list {
 	display: flex;
 	justify-content: center;
 	padding: 0;
+	margin: 0;
 }
-.clients-list .item {
-	margin-bottom: 94px;
-}
+
 .client-link {
 	fill: #afb1b8;
 	display: flex;
@@ -361,17 +372,18 @@ nav {
 
 .page-footer {
 	background-color: #2f303a;
+	padding-top: 60px;
+	padding-bottom: 60px;
 }
 .footer-block {
 	display: flex;
 	width: 1200px;
 	margin: 0 auto;
+	align-items: baseline;
 }
 .container.foot {
 	width: 270px;
 	margin: 0;
-	padding-top: 60px;
-	padding-bottom: 60px;
 }
 .page-footer .logo {
 	padding-top: 0;
@@ -413,7 +425,6 @@ nav {
 }
 .join-us {
 	margin: 0;
-	margin-top: 72px;
 	margin-bottom: 20px;
 }
 .networks.webstudio {
@@ -482,6 +493,10 @@ nav {
 	border: 1px solid #eeeeee;
 	margin-bottom: 30px;
 	margin-right: 30px;
+	height: 370px;
+}
+.project-descr {
+	padding: 20px 24px;
 }
 .projects .item:nth-child(3n) {
 	margin-right: 0px;
