--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -95,7 +95,18 @@ nav {
 	color: var(--acent-color);
 }
 .site-nav .link.current {
+	position: relative;
 	color: var(--acent-color);
+}
+.site-nav .link.current::after {
+	position: absolute;
+	content: "";
+	height: 4px;
+	width: 100%;
+	background-color: var(--acent-color);
+	bottom: 0;
+	left: 0;
+	border-radius: 2px;
 }
 
 .list {
@@ -250,6 +261,33 @@ nav {
 	display: flex;
 	padding: 0;
 }
+.our-workfield .item {
+	width: 370px;
+	height: 294px;
+	position: relative;
+}
+.item-descr {
+	display: block;
+	position: absolute;
+	text-align: center;
+	justify-content: center;
+	height: 70px;
+	width: 370px;
+	background-color: rgba(47, 48, 58, 0.8);
+	bottom: 0px;
+	left: 0;
+	padding-top: 27px;
+	padding-bottom: 27px;
+}
+.item-descr h3 {
+	font-size: 14px;
+	font-weight: 700;
+	line-height: 1.17;
+	letter-spacing: 0.03em;
+	text-transform: uppercase;
+	color: #ffffff;
+	margin: 0;
+}
 
 .team .item {
 	border: 1px solid #eeeeee;
@@ -332,7 +370,8 @@ nav {
 	margin-right: 10px;
 }
 
-.networks:hover {
+.networks:hover,
+.networks:focus {
 	background-color: var(--acent-color);
 	fill: #ffffff;
 }
@@ -504,6 +543,30 @@ nav {
 	margin-bottom: 30px;
 	margin-right: 30px;
 }
+
+.projects .item {
+	position: relative;
+}
+
+.project-link .cover-text {
+	display: block;
+	position: absolute;
+	height: 294px;
+	width: 100%;
+	font-size: 18px;
+	line-height: 1.55;
+	letter-spacing: 0.03em;
+	color: #ffffff;
+	background-color: rgba(33, 150, 243, 0.9);
+	padding: 63px 24px;
+	top: 0;
+	left: 0;
+	opacity: 0;
+}
+.cover-text:hover {
+	opacity: 1;
+}
+
 .project-descr {
 	padding: 20px 24px;
 }
