--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -182,6 +182,44 @@ nav {
 	border-radius: 4px;
 	border-color: transparent;
 }
+.backdrop {
+	position: fixed;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+
+	background-color: rgba(0, 0, 0, 0.2);
+	z-index: 1;
+	
+}
+.modal {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 528px;
+	height: 581px;
+	background-color: #ffffff;
+	justify-content: center;
+	align-items: center;
+	padding: 8px;
+}
+.close-modal {
+	display: flex;
+	margin-left: auto;
+	padding: 0;
+	width: 30px;
+	height: 30px;
+	border-radius: 50%;
+	border-color: transparent;
+	background-color: transparent;
+
+}
+.backdrop.is-hidden {
+	opacity: 0;
+	pointer-events: none;
+}
 
 /* MAIN CSS (without hero) */
 .section.features {
@@ -534,6 +572,7 @@ nav {
 }
 .project-link {
 	display: block;
+	width: 370;
 	position: relative;
 
 	color: #757575;
@@ -546,6 +585,9 @@ nav {
 	margin-bottom: 30px;
 	margin-right: 30px;
 }
+.project-link img {
+	display: block;
+}
 
 .cover-text {
 	display: block;
@@ -557,14 +599,13 @@ nav {
 	letter-spacing: 0.03em;
 	color: #ffffff;
 	background-color: rgba(33, 150, 243, 0.9);
-	padding: 63px 24px;
 	margin: 0;
 	top: 0;
 	left: 0;
 	opacity: 0;
 }
 
-.project-link:hover {
+.project-link:hover .cover-text {
 	opacity: 1;
 }
 
@@ -589,6 +630,7 @@ nav {
 	line-height: 1.88;
 }
 .container-descr {
+	width: 370px;
 	padding: 20px 24px;
 }
 
