--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -93,7 +93,6 @@ nav {
 	transition-property: color;
 	transition-duration: 250ms;
 	transition-timing-function: ubic-bezier(0.4, 0, 0.2, 1);
-
 }
 .site-nav .link:hover,
 .site-nav .link:focus {
@@ -205,21 +204,20 @@ nav {
 	z-index: 1;
 	transition-property: opacity;
 	transition-duration: 250ms;
-	transition-timing-function: ubic-bezier(0.4, 0, 0.2, 1);
-	
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal {
 	position: absolute;
 	top: 50%;
 	left: 50%;
-	transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%) scale(1);
 	width: 528px;
 	height: 581px;
 	background-color: #ffffff;
 	justify-content: center;
 	align-items: center;
 	padding: 8px;
-	
+	transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .close-modal {
 	display: flex;
@@ -227,16 +225,23 @@ nav {
 	padding: 0;
 	width: 30px;
 	height: 30px;
+	border: 1px solid;
 	border-radius: 50%;
-	border-color: transparent;
+	border-color: rgba(0, 0, 0, 0.1);
+	fill: #000000;
 	background-color: transparent;
 }
-.close-modal:hover {
+.close-modal:hover,
+.close-modal:focus {
 	fill: var(--acent-color);
+	border-color: var(--acent-color);
 }
 .backdrop.is-hidden {
 	opacity: 0;
 	pointer-events: none;
+}
+.backdrop.is-hidden .modal {
+	transform: translate(-50%, -50%) scale(0.8);
 }
 
 /* MAIN CSS (without hero) */
@@ -575,6 +580,9 @@ nav {
 	transition-property: background-color;
 	transition-duration: 250ms;
 	transition-timing-function: ubic-bezier(0.4, 0, 0.2, 1);
+	transition-property: color;
+	transition-duration: 250ms;
+	transition-timing-function: ubic-bezier(0.4, 0, 0.2, 1);
 }
 .filters .item:not(:last-child) {
 	margin-right: 8px;
@@ -617,6 +625,9 @@ nav {
 	border: 1px solid #eeeeee;
 	margin-bottom: 30px;
 	margin-right: 30px;
+	transition-property: box-shadow;
+	transition-duration: 250ms;
+	transition-timing-function: ubic-bezier(0.4, 0, 0.2, 1);
 }
 .project-link img {
 	display: block;
@@ -651,8 +662,9 @@ nav {
 	transform: translateY(100%);
 	transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
- 
-.project-link:hover .overlay {
+
+.project-link:hover .overlay,
+.project-link:focus .overlay {
 	transform: translate(0);
 }
 
